--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,12 @@
 
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-HX5QvHXoIsrUAY0tE/wG8+Wt1MwvaY28d9Zciqcj6Ob7Tw99tFPo4YUXcZw9l930" crossorigin="anonymous">
     <title>two-laws checklists poc</title>
+
+    <style>
+      .fa-1x {min-width: 1.5rem;}
+      .fa-2x {min-width: 3rem;}
+      .fa-3x {min-width: 4.5rem;}
+    </style>
   </head>
   <body>
     <noscript>
